# EspadaNegra

./: .dockerignore  .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: c-cpp.yml
client/: ClientWS.js  EventDispatcher.js  Match.js  Player.js  View.js  app.js  babel.config.js  game.js  index.html  package-lock.json  package.json
client/src/: App.vue  main.js
client/src/components/: ConnectionForm.vue  HelloWorld.vue  Match.vue
client/src/js/: ClientWS.js  EventDispatcher.js
client_/: app.js  styles.css
cmake/: Cache.cmake  CompilerWarnings.cmake  PrepareCatch2.cmake  StaticAnalyzers.cmake  prepareCatch2.cmake
docker/server/: Dockerfile
docker/web/: Dockerfile  mime.types
src/: CMakeLists.txt  EmscriptenBindings.cpp  main.cpp
src/Events/: Attack.hpp  AttackRequest.hpp  AttackResult.hpp  CMakeLists.txt  Common.hpp  Complex.hpp  Draw.hpp  Earn.hpp  Error.hpp  GameEvent.hpp  GetCard.hpp  InputEvent.cpp  InputEvent.hpp  IsAuctioneer.hpp  JSONParser.cpp  JSONParser.hpp  JoinMatchRequest.hpp  JoinMatchResult.hpp  Leave.hpp  MatchInfo.hpp  Offer.hpp  OfferRequest.hpp  OfferResult.hpp  OutputEvent.cpp  OutputEvent.hpp  Pass.hpp  PassRequest.hpp  PassResult.hpp  Pay.hpp  PlayerAction.hpp  PlayerEvent.hpp  PlayerResult.hpp  SetGold.hpp  Winner.hpp
src/Game/: CMakeLists.txt  Card.cpp  Card.hpp  CardModel.cpp  CardModel.hpp  Deck.cpp  Deck.hpp  GameModifier.hpp  GameParameter.hpp  Match.cpp  Match.hpp  MatchConfig.cpp  MatchConfig.hpp  MatchHandler.cpp  MatchHandler.hpp  Phase.hpp  PhaseHandler.cpp  PhaseHandler.hpp  Player.cpp  Player.hpp  Table.cpp  Table.hpp
src/IO/: Asio.hpp  Beast.hpp  CMakeLists.txt  IOHandler.cpp  IOHandler.hpp  Listener.cpp  Listener.hpp  MatchManager.cpp  MatchManager.hpp  Server.cpp  Server.hpp  WebsocketHandler.cpp  WebsocketHandler.hpp  WebsocketSession.cpp  WebsocketSession.hpp
src/Logging/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/Manager/: CMakeLists.txt  MatchManager.cpp  MatchManager.hpp  NoopManager.hpp  ServerManager.cpp  ServerManager.hpp
src/Model/: CMakeLists.txt  Card.cpp  Card.hpp  CardModel.cpp  CardModel.hpp  Deck.cpp  Deck.hpp  GameModifier.hpp  GameParameter.hpp  MatchConfig.cpp  MatchConfig.hpp  Player.cpp  Player.hpp
src/Parsing/: CMakeLists.txt  JSONParser.cpp  JSONParser.hpp
src/Utils/: CMakeLists.txt  Color.cpp  Color.hpp  Random.cpp  Random.hpp  Time.cpp  Time.hpp  Visitor.hpp
test/: CMakeLists.txt  testComplex.cpp  testEvents.cpp  testInputEvent.cpp  testJSONParser.cpp  testJoinMatchRequest.cpp  testPlayerAction.cpp
